Adicionando afazeres de forma correta

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-testando
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="estilo.css">
+    <title>Lista de Afazeres</title>
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <div id="app">
+        
+        <ul>
+           
+        </ul>
+        <input type="text" id="add" placeholder="Adicione algo a se fazer" autofocus>
+        <button id="add">Adicionar</button>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+
+</html>
